--- a/web_hw2.html
+++ b/web_hw2.html
@@ -8,64 +8,82 @@
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
+  <link href="https://gitcdn.github.io/bootstrap-toggle/2.2.2/css/bootstrap-toggle.min.css" rel="stylesheet">
+  <script src="https://gitcdn.github.io/bootstrap-toggle/2.2.2/js/bootstrap-toggle.min.js"></script>
   <link rel="stylesheet" href="home.css">
 </head>
 <body >
 
-	<div id="header1" >
+  <div id="header1" style="display:flex" >
 
-		<nav class="navbar navbar-default " >
-  			<div class="container-fluid">
-    		<div class="navbar-header">
-      		<img id= "logo" src="blue_logo_200x200.png" >
+    <nav class="navbar navbar-default " style="display:flex" id="headbox">
+        <div class="container-fluid">
+        <div class="navbar-header">
+          <img id= "logo" src="blue_logo_200x200.png" ></img>
 
-    		</div>
-    		<ul class="nav navbar-nav">
-      		<li class="active"><a href="#">خانه</a></li>
-      		<li><a href="#">داده</a></li>
-      	
-    		</ul>
-  			</div>
-  			<button id= "signup" class ="float-right">ثبت نام</button>
-  			<button id= "login" class ="float-right">ورود</button>
-		</nav>
-
-
-	
+        </div>
+        <ul class="nav navbar-nav">
+          <li class="active" id="hButton"><a href="#">خانه</a></li>
+          <li><a href="#" id="dButton">داده</a></li>
+        
+        </ul>
+        </div>
+        <button id= "signup" class ="float-right">ثبت نام</button>
+        <button id= "login" class ="float-right">ورود</button>
+    </nav>
 
 
 
 
-	</div> 
+  </div> 
 
 
-	<row>
-	<div id="sidebar" class="bg-success text-white col-lg-4"  >
-		<h4>اعضای تیم</h4>
-	</div>
-
-
-
-	<div class="col-lg-8">
-
-
-	<div class="container" id="cont1">
- 		<h3>Basic Navbar Example</h3>
-  		<p>A navigation bar is a navigation header that is placed at the top of the page.</p>
-	</div>
-	<div class="container" id="cont2">
- 		<h3>Basic Navbar Example</h3>
-  		<p>A navigation bar is a navigation header that is placed at the top of the page.</p>
-	</div>
-	</div>
-
-
-	</row>
+  <row>
+  <div id="sidebar" class="bg-success text-white col-lg-4"  >
+    <h4>اعضای تیم</h4>
+    <div id="list1">
+    <li>عضو اول</li>
+    <li>عضو دوم</li>
+    <li>عضو سوم</li>
+  </div>
+  <h4>تنظیمات</h4>
 
 
 
+<div id="shab" style="display:flex" >
+<p id="halatshab">حالت شب</p>
+<label class="switch">
+  <input type="checkbox">
+  <span class="slider round"></span>
+</label>
+</div>
 
 
-</body>	
+
+  </div>
+
+
+
+  <div class="col-lg-8">
+
+
+  <div class="container" id="cont1">
+    <h3>Basic Navbar Example</h3>
+      <p>A navigation bar is a navigation header that is placed at the top of the page.</p>
+  </div>
+  <div class="container" id="cont2">
+    <h3>Basic Navbar Example</h3>
+      <p>A navigation bar is a navigation header that is placed at the top of the page.</p>
+  </div>
+  </div>
+
+
+  </row>
+
+
+
+
+
+</body> 
 
 </html>
