--- a/web_hw2.html
+++ b/web_hw2.html
@@ -83,7 +83,8 @@
   </row>
 
 
-
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.0/jquery.min.js"></script>
+  <script src="script.js"></script>
 
 
 </body> 
