home page improved

--- a/web_hw2.html
+++ b/web_hw2.html
@@ -40,7 +40,34 @@
 
 
 
-  <row>
+  <row id="row1">
+    <div class="container" id="cont1">
+      <div id="block"><img id="blockImage" src="block.png" ></img></div>
+      <div id="block"><img id="blockImage" src="block.png" ></img></div>
+      <div id="block"><img id="blockImage" src="block.png" ></img></div>
+      <div id="block"><img id="blockImage" src="block.png" ></img></div>
+      <div id="block"><img id="blockImage" src="block.png" ></img></div>
+      <div id="block"><img id="blockImage" src="block.png" ></img></div>
+      <div id="block"><img id="blockImage" src="block.png" ></img></div>
+      <div id="block"><img id="blockImage" src="block.png" ></img></div>
+      <div id="block"><img id="blockImage" src="block.png" ></img></div>
+      <div id="block"><img id="blockImage" src="block.png" ></img></div>
+      <div id="block"><img id="blockImage" src="block.png" ></img></div>
+      <div id="block"><img id="blockImage" src="block.png" ></img></div>
+      <div id="block"><img id="blockImage" src="block.png" ></img></div>
+      <div id="block"><img id="blockImage" src="block.png" ></img></div>
+      <div id="block"><img id="blockImage" src="block.png" ></img></div>
+      <div id="block"><img id="blockImage" src="block.png" ></img></div>
+      <div id="block"><img id="blockImage" src="block.png" ></img></div>
+      <div id="block"><img id="blockImage" src="block.png" ></img></div>
+      <div id="block"><img id="blockImage" src="block.png" ></img></div>
+      <div id="block"><img id="blockImage" src="block.png" ></img></div>
+      <div id="block"><img id="blockImage" src="block.png" ></img></div>
+      <div id="block"><img id="blockImage" src="block.png" ></img></div>
+      <div id="block"><img id="blockImage" src="block.png" ></img></div>
+      
+    </div>
+
   <div id="sidebar" class="bg-success text-white col-lg-4"  >
     <h4>اعضای تیم</h4>
     <div id="list1">
@@ -63,22 +90,6 @@
 
 
   </div>
-
-
-
-  <div class="col-lg-8">
-
-
-  <div class="container" id="cont1">
-    <h3>Basic Navbar Example</h3>
-      <p>A navigation bar is a navigation header that is placed at the top of the page.</p>
-  </div>
-  <div class="container" id="cont2">
-    <h3>Basic Navbar Example</h3>
-      <p>A navigation bar is a navigation header that is placed at the top of the page.</p>
-  </div>
-  </div>
-
 
   </row>
 
