--- a/signUp.html
+++ b/signUp.html
@@ -10,7 +10,7 @@
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet"
           integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
-    <link rel="stylesheet" href="login.css">
+    <link rel="stylesheet" href="signUp.css">
 
 </head>
 <body style="background-color: #e8eff7;">
@@ -55,15 +55,15 @@
     <div>
         <div class="d-flex" style="height: 10%;">
             <div style="background-color: white">
-            	<div class="cont1">
+                <form>
+                    <div class="cont1">
                         <div id="signUpCont">
-                            <a href="signUp.html" style="font-size: 25px">ثبت نام</a>
+                            <a style="font-size: 25px">ثبت نام</a>
                         </div>
                         <div id="loginCont">
                             <a href="login.html" style="font-size: 25px">ورود</a>
                         </div>
                     </div>
-                <form>
                     <div class="form-group">
                         <input type="email" class="form-control rounded-0 border-primary" style=" width: 300px"
                                id="email"
@@ -73,6 +73,17 @@
                         <input type="password" class="form-control" style="border-color: #5592bd; width: 300px"
                                id="password"
                                placeholder="رمز عبور">
+                    </div>
+                    <div class="form-group">
+                        <input type="password" class="form-control" style="border-color: #5592bd; width: 300px"
+                               id="password-confirm"
+                               placeholder="تکرار رمز عبور">
+                    </div>
+                    <div>
+                        <input type="checkbox" class="form-check-input" id="rules">
+                        <label class="form-check-label" for="rules" style="color: #5592bd; padding-bottom: 5px">قوانین و
+                            مقررات را
+                            پذیرفته‌ام</label>
                     </div>
                     <button type="submit" class="form-control"
                             style="background-color: #186aa5; color: white; width: 300px">ثبت‌تام
